refactor: 💡 収集ページでの設定方法の変更
情報収集ページでの設定をapp.tsから分離

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preinstall": "typesync || :",
     "release:patch": "standard-version --release-as patch",
     "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major"
+    "release:major": "standard-version --release-as major",
+    "create-typeonly": "tsc src/recipe.config.ts --outFile src/types/recipe.config.d.ts -d --emitDeclarationOnly"
   },
   "keywords": [],
   "author": "",
