--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "skipLibCheck": true
   },
   "ts-node": {
-    "require": ["tsconfig-paths/register"]
+    "require": ["tsconfig-paths/register"],
+    "files": true
   }
 }
