--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
   "scripts": {
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release:patch": "standard-version --release-as patch",
-    "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major",
-    "preinstall": "typesync || :"
+    "release": "standard-version",
+    "postinstall": "typesync || :"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +18,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.1",
+    "@types/standard-version": "^7.1.1",
+    "cz-emoji": "1.3.2-canary.2",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
