feat: ✨️ (build) esbuildの導入
ファイルをバンドルできるように、esbuildを導入。また、ts-nodeの代わりにesbuild-registerを導入。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,17 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
 
+    /* Bundler mode */
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true, // コンパイル結果の.jsファイルなどを出力しない
+
     /* Type Checking */
     "strict": true,
     "skipLibCheck": true
   },
+  "include": ["src"],
   "ts-node": {
     "require": ["tsconfig-paths/register"],
     "files": true
