--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "node --require esbuild-register src/app.ts",
     "build": "node esbuild.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "serve:start": "pm2 start mocksite/server.js --name rsrc_col",
+    "serve:stop": "pm2 delete rsrc_col",
     "release": "standard-version",
-    "postinstall": "typesync || :"
+    "preinstall": "typesync || :"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +25,7 @@
     "cz-emoji": "1.3.2-canary.2",
     "esbuild": "^0.19.4",
     "esbuild-register": "^3.5.0",
+    "pm2": "^5.3.0",
     "standard-version": "^9.5.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
