--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "puppeteer": "^21.2.1"
   },
   "devDependencies": {
+    "@types/eslint": "^8.44.6",
     "@types/node": "^20.6.1",
     "@types/standard-version": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "bun-types": "latest",
     "cz-emoji": "1.3.2-canary.2",
     "esbuild": "^0.19.4",
     "esbuild-register": "^3.5.0",
+    "eslint": "^8.51.0",
     "pm2": "^5.3.0",
+    "prettier": "^3.0.3",
     "standard-version": "^9.5.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
