--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "build": "node esbuild.mjs",
     "serve:start": "pm2 start mocksite/server.js --name rsrc_col",
     "serve:stop": "pm2 delete rsrc_col",
+    "lint": "eslint .",
+    "fix": "prettier . --write && eslint . --fix",
     "test": "vitest",
     "release": "standard-version",
-    "preinstall": "typesync || :"
+    "preinstall": "typesync || :",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "eslint src --fix",
+    "src/**/*": "prettier src --write"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +28,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.44.6",
+    "@types/lint-staged": "^13.2.1",
     "@types/node": "^20.6.1",
     "@types/standard-version": "^7.1.1",
     "@typescript-eslint/eslint-plugin": "latest",
@@ -30,6 +38,8 @@
     "esbuild": "^0.19.4",
     "esbuild-register": "^3.5.0",
     "eslint": "^8.51.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.0.2",
     "pm2": "^5.3.0",
     "prettier": "^3.0.3",
     "standard-version": "^9.5.0",
