--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
       "~/*": ["src/*"]
     },
     // "rootDirs": [],
-    "typeRoots": ["./src/types","./node_modules","./node_modules/@types"],
+    "typeRoots": ["./src/types", "./node_modules", "./node_modules/@types"],
     "types": ["vitest/globals"],
-    
+
     /* Emit */
     "outDir": "./dist",
 
@@ -28,8 +28,7 @@
 
     /* Type Checking */
     "strict": true,
-    "skipLibCheck": true,
-
+    "skipLibCheck": true
   },
   "include": ["src"],
   "ts-node": {
